# Simulators-Almanac

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
enums/: __init__.py  environment.py  fields.py
readers/: __init__.py  all_readers.py  base_reader.py  environment.py  environmentdata.py  environmentreader.py  farmland.py  farmlandreader.py  farms.py  fields.py  fieldsreader.py
widgets/: __init__.py  finance_graph.py  navbar_button.py  path_browser.py
widgets/pages/: __init__.py  base_page.py  home.py  kvp_widget.py
